--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "homepage": "https://agyanim.github.io/Loopstudios-landing-page",
   "name": "techathon",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts-start",
+    "predeploy":"npm-run build",
+    "deply":"gh-pages-d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -20,6 +24,7 @@
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "vite": "^3.2.0"
