--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "react-scripts-start",
     "predeploy":"npm-run build",
-    "deply":"gh-pages-d build",
+    "deploy":"gh-pages-d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
