--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "react-scripts-start",
-    "predeploy":"npm-run build",
-    "deploy":"gh-pages-d build",
+    "predeploy":"yarn build",
+    "deploy":"gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
